@@ -1,5 +1,8 @@
 2008-01-03  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgst-structure.c, test/test_structure.rb: added #to_s and
+	#inspect.
+
 	* src/rbgst-structure.c, test/test_structure.rb: added #have_field?.
 
 	* src/rbgst-structure.c, test/test_structure.rb: added #nth_field_name.
